# junit2report

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  sample-test-results.xml
.github/workflows/: publish.yml
junit2report/: __init__.py  cli.py  generator.py  parser.py
junit2report/templates/: __init__.py  analytics.html  dark.html  legacy.html  minimal.html  modern.html
tests/: test_parser.py
