[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junit2html"
version = "1.0.0"
description = "CLI tool and library to convert JUnit XML test results into human-readable HTML dashboards"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "gorkalertxundi"}
]
keywords = ["junit", "xml", "html", "report", "test", "testing", "ci-cd", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "jinja2>=3.0.0",
]

[project.scripts]
junit2html = "junit_html_report_generator.cli:main"

[project.urls]
Homepage = "https://github.com/gorkalertxundi/junit-html-report-generator"
Repository = "https://github.com/gorkalertxundi/junit-html-report-generator"
Issues = "https://github.com/gorkalertxundi/junit-html-report-generator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["junit_html_report_generator*"]

[tool.setuptools.package-data]
junit_html_report_generator = ["templates/*.html"]

